CSS fixes for full-bleed-images

--- a/assets/css/scss/base/_media.scss
+++ b/assets/css/scss/base/_media.scss
@@ -67,6 +67,11 @@ figure.alignright {
 	margin: add-unit($space-half, 'em') auto;
 }
 
+.alignnone {
+	display: block;
+	margin: add-unit($space-half, 'em') 0;
+}
+
 @media screen and (min-width: 50em) {
 	@include line-height-and-spaces(1.5);
 
@@ -85,6 +90,11 @@ figure.alignright {
 
 	.aligncenter {
 		margin: add-unit($space-half, 'em') auto;
+	}
+
+	.alignnone {
+		display: block;
+		margin: add-unit($space-half, 'em') 0;
 	}
 
 	@include line-height-and-spaces(1.4);
@@ -135,4 +145,23 @@ figure.alignright {
 	display: block;
 	position: relative;
 	width: 100%;
+}
+
+.entry-content > .full-bleed-img {
+	margin-top: add-unit($space-half, 'em');
+	@media screen and (min-width: 50em) {
+		@include line-height-and-spaces(1.5);
+
+		margin-top: add-unit($space-half, 'em');
+
+		@include line-height-and-spaces(1.4);
+	}
+}
+
+.full-bleed-img-paragraph > .full-bleed-img {
+	margin: 0;
+}
+
+.full-bleed-img-paragraph::after {
+	@include clearfix;
 }
